# ProjectThalia

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  SplitEngineConfig.cmake.in  build.bat  main.cpp  vcpkg.json
cmake/: AutomateVCPKG.cmake  Vulkan.cmake
include/ProjectThalia/: Application.hpp  DataStructures.hpp  ErrorHandler.hpp  Event.hpp  Input.hpp  VulkanContext.hpp  VulkanDevice.hpp  Window.hpp
include/ProjectThalia/Core/: Application.hpp  Window.hpp
include/ProjectThalia/Debug/: Log.hpp
include/ProjectThalia/IO/: ImageFile.hpp  Stream.cpp  Stream.hpp
include/ProjectThalia/Rendering/: Device.hpp  Instance.hpp  Material.hpp  Model.hpp  PhysicalDevice.hpp  Pipeline.hpp  RenderPass.hpp  Renderer.hpp  Shader.hpp  Swapchain.hpp  Texture2D.cpp  Texture2D.hpp  TextureSettings.hpp  Vertex.hpp  VulkanContext.hpp
include/ProjectThalia/Rendering/Vulkan/: Allocator.hpp  Buffer.hpp  Context.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetManager.hpp  Device.hpp  DeviceObject.hpp  DynamicBuffer.hpp  Image.hpp  Instance.hpp  PhysicalDevice.hpp  Pipeline.hpp  RenderPass.hpp  Sampler.hpp  Swapchain.hpp  Utility.hpp
include/SplitEngine/: Application.hpp  ApplicationInfo.hpp  AssetDatabase.hpp  Contexts.hpp  DataStructures.hpp  ECS.hpp  ECSManager.hpp  ECSSettings.hpp  ErrorHandler.hpp  Event.hpp  Input.hpp  KeyCode.hpp  RenderingSettings.hpp  ShaderParserSettings.hpp  Stage.hpp  Stages.hpp  Systems.hpp  Window.hpp
include/SplitEngine/Audio/: Manager.hpp  SoundEffect.hpp
include/SplitEngine/Debug/: Log.hpp  Performance.hpp
include/SplitEngine/ECS/: Archetype.hpp  ArchetypeBase.hpp  Component.hpp  Context.hpp  ContextProvider.hpp  Entity.hpp  Manager.cpp  Manager.hpp  Registry.hpp  Stage.hpp  System.hpp  SystemBase.hpp
include/SplitEngine/IO/: Audio.hpp  AudioLoader.hpp  Image.hpp  ImageFile.hpp  ImageLoader.hpp  Stream.hpp
include/SplitEngine/Rendering/: Material.hpp  Model.hpp  Renderer.hpp  Shader.hpp  ShaderType.hpp  Sprite.cpp  Sprite.hpp  Texture2D.hpp  TextureSettings.hpp  Vertex.hpp
include/SplitEngine/Rendering/Vulkan/: Allocator.hpp  Buffer.hpp  BufferFactory.hpp  CommandBuffer.hpp  CommandType.hpp  Context.hpp  Descriptor.hpp  DescriptorSetAllocator.hpp  DescriptorSetManager.hpp  Device.hpp  DeviceObject.hpp  DynamicBuffer.hpp  Image.hpp  InFlightResource.hpp  Instance.hpp  PhysicalDevice.hpp  Pipeline.hpp  PipelineCreateInfo.hpp  QueueFamily.hpp  QueueType.hpp  RenderPass.hpp  Swapchain.hpp  Utility.hpp  ViewportStyle.hpp
include/SplitEngine/Tools/: ImagePacker.hpp  ImageSlicer.hpp  TexturePacker.hpp
include/SplitEngine/Utility/: String.hpp
res/shaders/: Debug.vert
res/shaders/debug/: Debug.frag  Debug.vert
src/ProjectThalia/: Application.cpp  ErrorHandler.cpp  Input.cpp  VulkanContext.cpp  VulkanDevice.cpp  Window.cpp
src/ProjectThalia/Core/: Application.cpp  Window.cpp
src/ProjectThalia/Debug/: Log.cpp
src/ProjectThalia/IO/: ImageFile.cpp  Stream.cpp
src/ProjectThalia/Rendering/: Device.cpp  Instance.cpp  Material.cpp  Model.cpp  PhysicalDevice.cpp  Pipeline.cpp  RenderPass.cpp  Renderer.cpp  Shader.cpp  Swapchain.cpp  Texture2D.cpp  VulkanContext.cpp
src/ProjectThalia/Rendering/Vulkan/: Allocator.cpp  Buffer.cpp  Context.cpp  DescriptorSetManager.cpp  Device.cpp  DeviceObject.cpp  DynamicBuffer.cpp  Image.cpp  Instance.cpp  PhysicalDevice.cpp  Pipeline.cpp  RenderPass.cpp  Sampler.cpp  Swapchain.cpp
src/SplitEngine/: Application.cpp  ErrorHandler.cpp  Input.cpp  Systems.cpp  Window.cpp
src/SplitEngine/Audio/: Manager.cpp  SoundEffect.cpp
src/SplitEngine/Debug/: Log.cpp
src/SplitEngine/ECS/: Archetype.cpp  ArchetypeBase.cpp  Registry.cpp
src/SplitEngine/IO/: AudioLoader.cpp  ImageFile.cpp  ImageLoader.cpp  Stream.cpp
src/SplitEngine/Rendering/: Material.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  Texture2D.cpp
src/SplitEngine/Rendering/Vulkan/: Allocator.cpp  Buffer.cpp  CommandBuffer.cpp  Context.cpp  DescriptorSetAllocator.cpp  DescriptorSetManager.cpp  Device.cpp  DeviceObject.cpp  DynamicBuffer.cpp  Image.cpp  Instance.cpp  PhysicalDevice.cpp  Pipeline.cpp  QueueFamily.cpp  RenderPass.cpp  Swapchain.cpp
src/SplitEngine/Tools/: ImagePacker.cpp  ImageSlicer.cpp  TexturePacker.cpp  TextureSlicer.cpp
src/SplitEngine/Utility/: String.cpp
src/Utility/: String.cpp
